# candelabra

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
examples/: test_phi3.rs  test_qwen2.rs
src/: config.rs  device.rs  download.rs  inference.rs  lib.rs  model.rs
