[package]
name = "candelabra"
version = "0.1.0"
edition = "2021"
description = "A high-level, framework-agnostic wrapper around candle-core for desktop GUIs"
license = "MIT OR Apache-2.0"
keywords = ["machine-learning", "llm", "candle", "ai"]
categories = ["science"]

[dependencies]
candle-core = { version = "0.9.2" }
candle-transformers = { version = "0.9.2" }
hf-hub = { version = "0.4" }
tokenizers = "0.19"
tokio = { version = "1", features = ["sync", "rt", "rt-multi-thread"] }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.12", features = ["stream"] }
futures = "0.3"
dirs = "6"

[target.'cfg(target_os = "macos")'.dependencies]
candle-core = { version = "0.9.2", features = ["metal", "accelerate"] }
candle-transformers = { version = "0.9.2", features = ["metal"] }

[target.'cfg(not(target_os = "macos"))'.dependencies]
candle-core = { version = "0.9.2", features = ["cuda"] }
candle-transformers = { version = "0.9.2", features = ["cuda"] }