[package]
name = "candelabra"
version = "0.1.3"
edition = "2021"
description = "Desktop-friendly GGUF LLaMA inference wrapper for Candle and Hugging Face Hub"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/candelabra"
homepage = "https://github.com/alan13367/candelabra"
repository = "https://github.com/alan13367/candelabra"
readme = "README.md"
keywords = ["llm", "llama", "gguf", "candle"]
categories = ["science"]
include = [
    "Cargo.toml",
    "README.md",
    "LICENSE-APACHE",
    "LICENSE-MIT",
    "src/**/*.rs",
]

[dependencies]
candle-core = { version = "0.9.2" }
candle-transformers = "0.9.2"
hf-hub = { version = "0.4" }
tokenizers = "0.19"
tokio = { version = "1", features = ["sync", "rt", "rt-multi-thread"] }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.12", features = ["stream"] }
futures = "0.3"
dirs = "6"

[target.'cfg(target_os = "macos")'.dependencies]
candle-core = { version = "0.9.2", features = ["metal", "accelerate"] }
candle-transformers = { version = "0.9.2", features = ["metal"] }

[target.'cfg(all(not(target_os = "macos"), not(candelabra_docsrs)))'.dependencies]
candle-core = { version = "0.9.2", features = ["cuda"] }
candle-transformers = { version = "0.9.2", features = ["cuda"] }

[target.'cfg(all(not(target_os = "macos"), candelabra_docsrs))'.dependencies]
candle-core = { version = "0.9.2" }
candle-transformers = { version = "0.9.2" }

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
cargo-args = ["--config", "build.rustflags=[\"--cfg\", \"candelabra_docsrs\"]"]
