[package]
name = "candelabra"
version = "0.1.4"
edition = "2021"
description = "Desktop-friendly GGUF LLaMA inference wrapper for Candle and Hugging Face Hub"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/candelabra"
homepage = "https://github.com/alan13367/candelabra"
repository = "https://github.com/alan13367/candelabra"
readme = "README.md"
keywords = ["llm", "llama", "gguf", "candle"]
categories = ["science"]
include = [
    "Cargo.toml",
    "README.md",
    "LICENSE-APACHE",
    "LICENSE-MIT",
    "src/**/*.rs",
]

[dependencies]
candle-core = { version = "0.9.2" }
candle-transformers = "0.9.2"
hf-hub = { version = "0.4" }
tokenizers = "0.19"
tokio = { version = "1", features = ["sync", "rt", "rt-multi-thread"] }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.12", features = ["stream"] }
futures = "0.3"
dirs = "6"

[features]
default = []
accelerate = ["candle-core/accelerate", "candle-transformers/accelerate"]
cuda = ["candle-core/cuda", "candle-transformers/cuda"]
cudnn = ["cuda", "candle-core/cudnn", "candle-transformers/cudnn"]
metal = ["candle-core/metal", "candle-transformers/metal"]
mkl = ["candle-core/mkl", "candle-transformers/mkl"]
qwen3-moe = []

[package.metadata.docs.rs]
rustdoc-args = ["--cfg", "docsrs"]
no-default-features = true
